bases/managers/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  annotations:
    k0s.reynn.net/resource-profile: small
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - mimikyu
      containers:
        - name: sonarr
          image: linuxserver/sonarr
          resources: {}
          ports:
            - containerPort: 8989
              name: tcp-server
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tv
              mountPath: /media/deadpool/tv
            - name: anime-dual-audio
              mountPath: /media/deadpool/anime_dual_audio
            - name: anime
              mountPath: /media/deadpool/anime
            - name: sports
              mountPath: /media/deadpool/sports
            - name: downloads
              mountPath: /media/deadpool/downloads
      volumes:
        - name: downloads
          hostPath:
            path: /media/deadpool/downloads
            type: Directory
        - name: tv
          hostPath:
            path: /media/deadpool/tv
            type: DirectoryOrCreate
        - name: anime-dual-audio
          hostPath:
            path: /media/deadpool/anime_dual_audio
            type: DirectoryOrCreate
        - name: anime
          hostPath:
            path: /media/deadpool/anime
            type: DirectoryOrCreate
        - name: sports
          hostPath:
            path: /media/deadpool/sports
            type: DirectoryOrCreate
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
